# decentralized-name-registration-system-substrate

./: README.md
pallets/namereg/: Cargo.toml
pallets/namereg/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
